   - is_zero/1

  The following functions in the integer module have been deprecated:

   - from_string/1
   - from_base_string/2
   - int/1

* The following predicates and functions have been added to the require module:

   - error/2
   - func_error/2

* The following predicates have been added to the string module:

   - is_all_alnum/1
   - is_empty/1
   - is_well_formed/1
   - to_utf8_code_unit_list/2
   - to_utf16_code_unit_list/2
   - from_utf8_code_unit_list/2
   - from_utf16_code_unit_list/2
   - det_remove_prefix/3
   - compare_ignore_case_ascii/3
   - to_rev_char_list/2
   - compare_substrings/6
   - unsafe_compare_substrings/6
   - nondet_append/3

  The following procedures in the string module have been deprecated:

   - to_char_list(uo, in)
   - to_rev_char_list(uo, in)
   - from_char_list(out, in)
   - append(out, out, in)
   - prefix(in, out)
   - suffix(in, out)

* The following predicates have been added to the map module:

   - foldl5/12
   - foldr5/12
   - map_foldl4/11
   - intersect_list/4
   - union_list/4
   - select_unselect/4
   - select_unselect_sorted_list/4

* The following predicates have been added to the tree234 module:

   - map_foldl4/11

* The following predicates and/or functions have been added to the set modules:

   - intersection_and_differences
   - det_remove
   - det_remove_list
   - rev_sorted_list_to_set

   while the following predicates and/or functions have been marked as obsolete:

   - empty
   - non_empty
   - set

* We have a added a new type, maybe_errors, to the maybe module.

  The following predicate and function have been added to the maybe module:

   - fold2_maybe/6
   - maybe_default/2
   - pred_to_maybe/1
   - func_to_maybe/1

* The following predicates and functions have been added to the calendar
  module:

   - int_to_month/2
   - det_int_to_month/1
   - int0_to_month/2
   - det_int0_to_month/1
   - month_to_int/1
   - month_to_int0/1
   - same_date/1
